[gd_scene load_steps=5 format=3 uid="uid://da3mti1r1fwyl"]

[ext_resource type="Script" uid="uid://duewjlgfxqbfu" path="res://Script/cannon.gd" id="1_i10un"]
[ext_resource type="PackedScene" uid="uid://bowtxrdpfddx2" path="res://Scene/bullet.tscn" id="2_23j6s"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_i10un"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfdgm"]
size = Vector2(173, 20)

[node name="Cannon" type="Node2D"]
script = ExtResource("1_i10un")
bullet_scene = ExtResource("2_23j6s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.375, 5)
scale = Vector2(31.25, 21.5)
texture = SubResource("PlaceholderTexture2D_i10un")

[node name="FireTimer" type="Timer" parent="."]

[node name="BulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(10, 3)

[node name="RangeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
position = Vector2(104, 4)
shape = SubResource("RectangleShape2D_sfdgm")

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
